# termpipe-mcp

./: .gitignore  AUTOMATED_INSTALL.md  GEMINI_CLI_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALL_SCRIPTS_SUMMARY.md  README.md  SESSION_SUMMARY.md  SYSTEMD_SERVICE.md  VERIFICATION.md  claude-code-install.sh  claude-desktop-install.sh  gemini-install.sh  install-claude-code.sh  install-claude-desktop.sh  install-gemini.sh  install-iflow.sh  install-launchd.sh  install.sh  pyproject.toml  quick-install.ps1  quick-install.sh  systemd-setup.sh
termpipe_mcp/: __init__.py  bootstrap.py  cli.py  config.py  fastapi_server.py  first_run.py  helpers.py  server.py  settings.py
termpipe_mcp/tools/: __init__.py  apps.py  debug.py  files.py  gemini_debug.py  gtt.py  iflow.py  process.py  search.py  surgical.py  system.py  termf.py  thread.py  wbind.py  web_search.py
termpipe_mcp/tools/surgical/: __init__.py  formatters.py  helpers.py  readers.py  replacers.py  reviewer.py  writers.py
